--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,12 @@ body {
 }
 
 .heading {
-    font-size: 26px;
+    font-size: 18px;
     color: maroon;
     font-weight: bold;
 }
 
 span {
-    margin: 5px;
     font-weight: bold;
 }
 
@@ -29,6 +28,7 @@ input, select {
     font-weight: bold;
     border: none;
     padding: 10px;
+    cursor: pointer;
 }
 
 /*----------*/
@@ -42,18 +42,28 @@ input, select {
     background: #edf2f4;
     border-bottom: 1px solid #999;
 }
+
 .header a {
     color: #0072ff;
     text-decoration: none;
     margin-left: 20px;
     margin-right: 5px;
 }
+
 .header a:hover {
     color: #8a0f53;
 }
+
 .header small {
     color: #666;
 }
+
 .header .active {
     color: #2c7613;
 }
+
+.logout {
+    float: right;
+}
+
+/*----------*/
